--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "accordion-collapse-react-native": "^0.1.11",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
@@ -19,6 +18,7 @@
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-switch-selector": "^2.0.0",
+    "react-native-webview": "^7.4.2",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.4"
