--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
+    "react-native-clean-project": "^3.2.4",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
