--- a/ios/osteoporose.xcodeproj/xcshareddata/xcschemes/osteoporose.xcscheme
+++ b/ios/osteoporose.xcodeproj/xcshareddata/xcschemes/osteoporose.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "osteoporose.app"
+               BuildableName = "Osteoporose.app"
                BlueprintName = "osteoporose"
                ReferencedContainer = "container:osteoporose.xcodeproj">
             </BuildableReference>
@@ -59,7 +59,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "osteoporose.app"
+            BuildableName = "Osteoporose.app"
             BlueprintName = "osteoporose"
             ReferencedContainer = "container:osteoporose.xcodeproj">
          </BuildableReference>
@@ -92,7 +92,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "osteoporose.app"
+            BuildableName = "Osteoporose.app"
             BlueprintName = "osteoporose"
             ReferencedContainer = "container:osteoporose.xcodeproj">
          </BuildableReference>
@@ -109,7 +109,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "osteoporose.app"
+            BuildableName = "Osteoporose.app"
             BlueprintName = "osteoporose"
             ReferencedContainer = "container:osteoporose.xcodeproj">
          </BuildableReference>
