--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_UPLOAD_STORE_FILE=osteoporose-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=c0llir00t
+MYAPP_UPLOAD_KEY_PASSWORD=c0lligetr00t
