Atualiza certificado de upload para Google Play

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,6 +21,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 MYAPP_UPLOAD_STORE_FILE=osteoporose-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_KEY_ALIAS=osteoporose1.0.1
 MYAPP_UPLOAD_STORE_PASSWORD=c0llir00t
-MYAPP_UPLOAD_KEY_PASSWORD=c0lligetr00t
+MYAPP_UPLOAD_KEY_PASSWORD=c0llir00t
